--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=MonteCarlo&family=Style+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=MonteCarlo&family=Signika+Negative&family=Style+Script&display=swap" rel="stylesheet">
     <title>WEB222 Final Assessment - Summer 2021</title>
-    <script src="js/siteForm.js"></script>
+    <script src="siteForm.js"></script>
 </head>
 <body>
     <div class="mainPage">
@@ -21,7 +21,7 @@
 
             <div class="subContent1">
                 <div class="imageMyPhoto">  
-                    <img src="image/myphoto.jpg" alt="lks" class="image">
+                    <img src="myphoto.jpg" alt="lks" class="image">
                 </div>
                 <h2>KYEONGSOO LEE</h2>
                 <p>Software Engineer</p>
