--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <label for="entry2">Email Address:</label><br>
                         <input id="entry2" type="email" name="email" placeholder="Email address goes here" required>
                         <br>
-                        <label for="entry3">Adress:</label><br>
+                        <label for="entry3">Address:</label><br>
                         <input id="entry3" type="text" name="address" placeholder="Your Address goes here" required>
                         <br>
                         <label for="entry4">City:</label><br>
