--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <br>   
                         <label for="entry5">Postal Code:</label><br>  
                         <input id="entry5" type="text" name="PostalCode" placeholder="Only A1A 1A1 format" required  
-                        pattern="^(?!.*[DFIOQU])[A-Z][0-9][A-Z] [0-9][A-Z][0-9]$">  
+                        pattern="^[ABCEGHJKLMNPRSTVXY][0-9][A-Z] [0-9][A-Z][0-9]$">  
                         <br> 
                         <input id="question" type="radio" name="option" value="question" onclick="radioOption();">
                         <label for="question">Question</label><br>
